--- a/FrontEnd/settings.html
+++ b/FrontEnd/settings.html
@@ -60,6 +60,7 @@
         height: 40%;
     }
 </style>
+<!-- Inside index.html -->
 <div class="modal fade" id="settingsModal" tabindex="-1" aria-labelledby="settingsModalLabel" aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered settings-modal-dialog"
         style="max-width: 35%; width: auto; resize: both; overflow: auto;">
@@ -101,68 +102,7 @@
                     <!-- Content Area in Modal -->
                     <div class="col-8">
                         <div id="settingsContent">
-                            <!-- Updated General Tab Content -->
-                            <div id="general">
-                                <h6>Chat</h6>
-                                <div class="d-flex align-items-center">
-                                    <p class="mb-0">Show tokens usage in chat</p>
-                                    <div class="form-check form-switch ms-auto">
-                                        <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckDefault">
-                                        <label class="form-check-label" for="flexSwitchCheckDefault"></label>
-                                    </div>
-                                </div>
-                            </div>
-
-                            <!-- Profile Tab Content -->
-                            <div id="profile" style="display: none;">
-                                <h6>Profile Details</h6>
-                                <div class="mb-3">
-                                    <label for="emailInput" class="form-label">Email</label>
-                                    <input type="email" class="form-control" id="emailInput" placeholder="Enter your email" value="example@example.com">
-                                </div>
-                                <div class="mb-3">
-                                    <label for="phoneInput" class="form-label">Phone</label>
-                                    <input type="tel" class="form-control" id="phoneInput" placeholder="Enter your phone number" value="+1234567890">
-                                </div>
-                                <!-- Save Button -->
-                                <div class="save-button-container">
-                                    <button type="button" class="btn btn-primary">Save</button>
-                                </div>
-                            </div>
-
-                            <!-- Tokens Tab Content -->
-                            <div id="tokens" style="display: none;">
-                                <h6>Token Usage</h6>
-                                <div class="d-flex align-items-center">
-                                    <p class="mb-0">Available Token</p>
-                                    <span class="token-label">100</span>
-                                </div>
-                                <div class="d-flex align-items-center">
-                                    <p class="mb-0">Total Tokens</p>
-                                    <span class="token-label">500</span>
-                                </div>
-                                <!-- Current Version Label -->
-                                <div class="d-flex align-items-center">
-                                    <p class="mb-0">Current Version</p>
-                                    <span class="version-label">Free</span> <!-- Change to "Premium" if applicable -->
-                                </div>
-                                <!-- Upgrade to Premium Button -->
-                                <div class="upgrade-button-container">
-                                    <button type="button" class="btn btn-warning" onclick="upgradeToPremium()">Upgrade to Premium</button>
-                                </div>
-                            </div>
-
-                            <!-- Editor Tab Content -->
-                            <div id="editor" style="display: none;">
-                                <h6>Editor Settings</h6>
-                                <div class="d-flex align-items-center">
-                                    <p class="mb-0">Enable line wrapping</p>
-                                    <div class="form-check form-switch ms-auto">
-                                        <input class="form-check-input" type="checkbox" role="switch" id="lineWrappingSwitch">
-                                        <label class="form-check-label" for="lineWrappingSwitch"></label>
-                                    </div>
-                                </div>
-                            </div>
+                            <!-- Content goes here -->
                         </div>
                     </div>
                 </div>
