--- a/FrontEnd/loginpage.html
+++ b/FrontEnd/loginpage.html
@@ -1,63 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-<<<<<<< HEAD
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Login-page</title>
-    <link rel="stylesheet" href="loginpage.css" />
-  </head>
-  <body>
-    <header class="code">
-      <img class="code" src="Assets/Logo.svg" alt="" />
-    </header>
-    <div class="Loginpage">
-      <div class="left-side">
-        <p>“Make your Code Converse easier By just one Click”</p>
-        <img src="Assets/video sample.jpg" alt="" />
-      </div>
-      <div class="right-side">
-        <h2>Welcome Back!</h2>
-        <p>Sign in to Code Conversion</p>
-        <form class="form">
-          <p class="email">Email</p>
-          <input type="email" name="email" id="email" />
-          <p class="email">Password</p>
-          <input type="password" name="password" id="password" />
-        </form>
-        <a href="signuppage.html"
-          ><p class="dont">Don’t have an account?</p></a
-        >
-        <button class="btn-sign">Sign in</button>
-
-        <hr />
-        <button class="btn-google">
-          <img src="Assets/icons8-google-20.png" />
-          <a href="">sign in with google</a>
-        </button>
-        <p>
-          <a class="forgot" href="forgotpassword.html">Forgot Password?</a>
-          <a class="Help" href="">Help Center</a>
-        </p>
-      </div>
-    </div>
-    <footer>
-      <img src="Assets/Icons/x.svg" alt="" />
-      <img src="Assets/Icons/icons8-instagram.svg" alt="" />
-      <img src="Assets/Icons/git.svg" alt="" />
-      <a class="foot">. Terms of Service</a>
-      <a class="foot">. Privacy Policy</a>
-      <a class="foot">. Code Convertion</a>
-    </footer>
-  </body>
-</html>
-=======
 
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Login Page</title>
-  <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="css/main.css" />
 </head>
 
@@ -132,4 +80,3 @@
 </body>
 
 </html>
->>>>>>> e6914e8301dfb95209b641775284089e7b000267
