--- a/FrontEnd/signuppage.html
+++ b/FrontEnd/signuppage.html
@@ -3,50 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<<<<<<< HEAD
-    <title>signup-page</title>
-    <link rel="stylesheet" href="loginpage.css" />
-  </head>
-  <body>
-    <header class="code">
-      <img class="code" src="Assets/Logo.svg" alt="" />
-    </header>
-    <div class="Loginpage">
-      <div class="left-side">
-        <p>“Make your Code Converse easier By just one Click”</p>
-        <img src="Assets/video sample.jpg" alt="" />
-      </div>
-      <div class="right-side">
-        <p>Create Your Own Code Conversion Account</p>
-        <form class="form">
-          <p class="email">Email</p>
-          <input type="email" name="email" id="email" />
-          <p class="email">Phone</p>
-          <input type="number" name="Phone" id="Phone" />
-          <p class="email">Password</p>
-          <input type="password" name="password" id="password" />
-        </form>
-        <a href=""><p class="dont">Already have an account</p></a>
-        <button class="btn-sign">Sign in</button>
-
-        <hr />
-        <button class="btn-google">
-          <img src="Assets/icons8-google-20.png" />
-          <a href="">sign in with google</a>
-        </button>
-      </div>
-    </div>
-
-    <footer id="footers">
-      <img src="Assets/Icons/x.svg" alt="" />
-      <img src="Assets/Icons/icons8-instagram.svg" alt="" />
-      <img src="Assets/Icons/git.svg" alt="" />
-      <a class="foot">. Terms of Service</a>
-      <a class="foot">. Privacy Policy</a>
-      <a class="foot">. Code Convertion</a>
-=======
     <title>Signup Page</title>
-    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/main.css" />
   </head>
   <body>
@@ -114,7 +72,6 @@
           </ul>
         </div>
       </div>
->>>>>>> e6914e8301dfb95209b641775284089e7b000267
     </footer>
   </body>
 </html>
