--- a/FrontEnd/contact.html
+++ b/FrontEnd/contact.html
@@ -4,35 +4,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact Us</title>
+    <title>Contact Form</title>
+    <link rel="stylesheet" href="css/main.css">
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
     <style>
         * {
-            margin: 0; 
-            padding: 0; 
-            box-sizing: border-box; 
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+            font-family: 'Poppins', sans-serif;
         }
         body {
             background: linear-gradient(to right, #0f0c29, #302b63, #24243e);
             color: white;
             padding: 20px;
-        }
-        nav {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            padding: 20px;
-            background: rgba(0, 0, 0, 0.2);
-        }
-        nav ul {
-            list-style: none;
-            display: flex;
-            gap: 20px;
-        }
-        nav ul li a {
-            text-decoration: none;
-            color: white;
-            font-size: 16px;
         }
         .container {
             display: flex;
@@ -79,16 +65,11 @@
             background: rgba(255, 255, 255, 0.1);
             border-radius: 8px;
         }
-        .contact-section {
-            flex: 1;
-            text-align: left;
-        }
         .right {
             background: rgba(255, 255, 255, 0.1);
             padding: 30px;
             border-radius: 10px;
-            width: 40%
-
+            width: 40%;
         }
         .right h2 {
             font-size: 24px;
@@ -100,9 +81,6 @@
         .form-row {
             display: flex;
             gap: 10px;
-        }
-        .form-row input {
-            flex: 1;
         }
         .right input, .right textarea {
             width: 100%;
@@ -130,22 +108,35 @@
 </head>
 
 <body>
-    <nav>
-        <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="#">Pricing</a></li>
-            <li><a href="#">Overview</a></li>
-            <li><a href="#">Contact</a></li>
-            <li><a href="#">Services</a></li>
-        </ul>
-    </nav>
+    <header>
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark" style="opacity: 0.5;">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="Home.html">
+                    <img src="Assets/images/Logo.svg" alt="Logo">
+                </a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNavDropdown">
+                    <ul class="navbar-nav">
+                        <li class="nav-item"><a class="nav-link active text-white" href="#">Home</a></li>
+                        <li class="nav-item"><a class="nav-link text-white" href="price.html">Pricing</a></li>
+                        <li class="nav-item"><a class="nav-link text-white" href="#">Overview</a></li>
+                        <li class="nav-item"><a class="nav-link text-white" href="contact.html">Contact</a></li>
+                        <li class="nav-item"><a class="nav-link text-white" href="#">Services</a></li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+    </header>
+
     <div class="container">
         <div class="left">
             <h1>Get in Touch: <span>We're Here to Answer Your Questions</span></h1>
             <div class="contact-info">
                 <div class="contact-boxes">
-                    <div class="contact-box"><i>📧</i> support@lorem.com</div>
-                    <div class="contact-box"><i>📞</i> +91-101023031</div>
+                    <div class="contact-box">📧 support@lorem.com</div>
+                    <div class="contact-box">📞 +91-101023031</div>
                 </div>
                 <div class="contact-details">
                     <div class="contact-section">
@@ -172,6 +163,21 @@
             <button>Submit</button>
         </div>
     </div>
+
+    <footer class="footer fixed-bottom">
+        <div class="container-fluid">
+            <div class="d-flex justify-content-end py-3">
+                <ul class="list-inline mb-0">
+                    <li class="list-inline-item"><img src="Assets/Icons/icons8-instagram.svg" alt="Instagram"></li>
+                    <li class="list-inline-item"><img src="Assets/Icons/x.svg" alt="X"></li>
+                    <li class="list-inline-item"><img src="Assets/Icons/git.svg" alt="GitHub"></li>
+                    <li class="list-inline-item"><a class="text-white" href="#">Terms of Service</a></li>
+                    <li class="list-inline-item"><a class="text-white" href="#">Privacy Policy</a></li>
+                    <li class="list-inline-item"><a class="text-white" href="#">Code Conversion</a></li>
+                </ul>
+            </div>
+        </div>
+    </footer>
 </body>
 
 </html>
