--- a/FrontEnd/loginpage.html
+++ b/FrontEnd/loginpage.html
@@ -12,7 +12,7 @@
 <body>
   <header>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark" style="opacity: 0.5;">
-      <a class="navbar-brand" href="#">
+      <a class="navbar-brand" href="Home.html">
         <img src="Assets/images/Logo.svg" alt="Logo" />
       </a>
     </nav>
@@ -34,10 +34,10 @@
           <p><b>Sign in to Code Conversion</b></p>
           <form>
             <label for="email">Email</label>
-            <input type="email" name="email" id="email" placeholder="Enter your email" required />
+            <input type="email" name="email" id="email" placeholder="Enter your email" required style="color: #000; background-color: #fff; padding: 10px; border: 1px solid #ccc; border-radius: 5px; width: 100%;" />
   
             <label for="password">Password</label>
-            <input type="password" name="password" id="password" placeholder="Enter your password" required />
+            <input type="password" name="password" id="password" placeholder="Enter your password" required style="color: #000; background-color: #fff; padding: 10px; border: 1px solid #ccc; border-radius: 5px; width: 100%;" />
   
             <button type="submit" class="btn-sign">Sign In</button>
           </form>
