--- a/FrontEnd/settings.html
+++ b/FrontEnd/settings.html
@@ -1,66 +1,3 @@
-<style>
-    a.nav-link {
-        color: white;
-        cursor: pointer;
-    }
-
-    a.nav-link:hover {
-        color: #007bff;
-        text-decoration: none;
-    }
-
-    a.nav-link.active {
-        color: #007bff;
-        font-weight: bold;
-    }
-
-    /* Custom CSS for input boxes */
-    .form-control {
-        background-color: #2a2e3a;
-        color: white;
-        border: 1px solid #444;
-    }
-
-    .form-control:focus {
-        background-color: #2a2e3a;
-        color: white;
-        border-color: #007bff;
-        box-shadow: none;
-    }
-
-    /* Custom CSS for Save button alignment */
-    .save-button-container {
-        display: flex;
-        justify-content: flex-end;
-        margin-top: 20px;
-    }
-
-    /* Custom CSS for Tokens section */
-    .token-label {
-        margin-left: auto; /* Push the label to the right */
-        font-weight: bold;
-    }
-
-    .upgrade-button-container {
-        display: flex;
-        justify-content: flex-end;
-        margin-top: 20px;
-    }
-
-    /* Custom CSS for version label */
-    .version-label {
-        margin-left: auto; /* Push the label to the right */
-        font-weight: bold;
-        color: #28a745; /* Green for Premium, change to #dc3545 for Free */
-    }
-
-    /* Increase the height of the settings modal */
-    .settings-modal-dialog {
-        min-height: 400px; /* Adjust this value as needed */
-        height: 40%;
-    }
-</style>
-<!-- Inside index.html -->
 <div class="modal fade" id="settingsModal" tabindex="-1" aria-labelledby="settingsModalLabel" aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered settings-modal-dialog"
         style="max-width: 35%; width: auto; resize: both; overflow: auto;">
@@ -68,7 +5,14 @@
             <div class="modal-header" style="color: aliceblue;">
                 <h5 class="modal-title" id="settingsModalLabel">Settings <img src="Assets/Icons/icons8-settings.svg"
                         alt="" style="height: 25px;"></h5>
-                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close" style="color: aliceblue;"></button>
+                <button type="button" class="btn-close-custom" data-bs-dismiss="modal" aria-label="Close">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
+                        stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+                        class="feather feather-x">
+                        <line x1="18" y1="6" x2="6" y2="18"></line>
+                        <line x1="6" y1="6" x2="18" y2="18"></line>
+                    </svg>
+                </button>
             </div>
             <div class="modal-body">
                 <div class="row">
