--- a/FrontEnd/Home.html
+++ b/FrontEnd/Home.html
@@ -208,7 +208,6 @@
                             data-bs-target="#settingsModal">Settings</a>
                     </li>
                     <li class="nav-item"><a href="#" class="nav-link text-white">Support</a></li>
-                    <div class="dropdown-divider"></div>
                 </ul>
             </div>
 
@@ -226,8 +225,7 @@
         </aside>
 
         <!-- Sidebar Toggle Button -->
-        <button id="sidebarToggle" class="btn position-fixed text-white"
-            style="left: 10px; bottom: 20px; z-index: 1001; width: 50px; height: 50px;">
+        <button id="sidebarToggle" class="btn position-fixed text-white">
             <img src="Assets/Icons/sidebar.svg" alt="Open" id="openIcon" style="display: block;">
             <img src="Assets/Icons/sidebar.svg" alt="Close" id="closeIcon" style="display: none;">
         </button>
