--- a/FrontEnd/contact.html
+++ b/FrontEnd/contact.html
@@ -4,50 +4,58 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact Form</title>
+    <title>Code Conversion Challenge</title>
+    <link rel="icon" href="Assets/Icons/icons8-registry-editor-96.png" type="image/x-icon">
     <link rel="stylesheet" href="css/main.css">
-    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
+    <!-- Bootstrap 5 CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-            font-family: 'Poppins', sans-serif;
+        /* Custom CSS for dropdown positioning */
+        .dropdown-menu-custom { 
+            left: -100px !important;
+            /* Adjust this value to align the dropdown */
+            top: 100% !important;
+            /* Position below the icon */
         }
-        body {
-            background: linear-gradient(to right, #0f0c29, #302b63, #24243e);
-            color: white;
-            padding: 20px;
-        }
+
+        /* Add these new styles for sidebar integration */
+        /* Adjust container padding*/
+        /* Custom CSS for input boxes */
+
         .container {
             display: flex;
             justify-content: space-between;
             align-items: center;
             padding: 50px 100px;
         }
+
         .left {
             max-width: 50%;
         }
+
         .left h1 {
             font-size: 36px;
         }
+
         .left h1 span {
             background: linear-gradient(to right, #ff416c, #833ab4);
             -webkit-background-clip: text;
             -webkit-text-fill-color: transparent;
         }
+
         .contact-info {
             margin-top: 20px;
             display: flex;
             flex-direction: column;
             gap: 20px;
         }
+
         .contact-boxes {
             display: flex;
             justify-content: space-between;
             gap: 20px;
         }
+
         .contact-box {
             display: flex;
             align-items: center;
@@ -56,6 +64,7 @@
             border-radius: 8px;
             width: 48%;
         }
+
         .contact-details {
             display: flex;
             justify-content: space-between;
@@ -65,24 +74,29 @@
             background: rgba(255, 255, 255, 0.1);
             border-radius: 8px;
         }
+
         .right {
             background: rgba(255, 255, 255, 0.1);
             padding: 30px;
             border-radius: 10px;
             width: 40%;
         }
+
         .right h2 {
             font-size: 24px;
         }
+
         .right p {
             font-size: 14px;
             color: #ddd;
         }
+
         .form-row {
             display: flex;
             gap: 10px;
         }
-        .right input, .right textarea {
+        .right input,
+        .right textarea {
             width: 100%;
             padding: 10px;
             margin: 10px 0;
@@ -92,9 +106,11 @@
             border: 1px solid #ddd;
             color: white;
         }
+
         .right textarea {
             height: 100px;
         }
+
         .right button {
             width: 100%;
             background: #007bff;
@@ -110,59 +126,120 @@
 <body>
     <header>
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark" style="opacity: 0.5;">
+            <div class="logo"></div>
+            <a class="navbar-brand" href="Home.html">
+                <img src="Assets/images/Logo.svg" alt="Logo">
+            </a>
             <div class="container-fluid">
-                <a class="navbar-brand" href="Home.html">
-                    <img src="Assets/images/Logo.svg" alt="Logo">
-                </a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown">
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false"
+                    aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNavDropdown">
                     <ul class="navbar-nav">
-                        <li class="nav-item"><a class="nav-link active text-white" href="#">Home</a></li>
-                        <li class="nav-item"><a class="nav-link text-white" href="price.html">Pricing</a></li>
-                        <li class="nav-item"><a class="nav-link text-white" href="#">Overview</a></li>
-                        <li class="nav-item"><a class="nav-link text-white" href="contact.html">Contact</a></li>
-                        <li class="nav-item"><a class="nav-link text-white" href="#">Services</a></li>
+                        <li class="nav-item">
+                            <a class="nav-link active text-white" aria-current="page" href="Home.html">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-white" href="price.html">Pricing</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-white" href="#">Overview</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-white" href="contact.html">Contact</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-white" href="#">Services</a>
+                        </li>
                     </ul>
+                </div>
+                <div class="dropdown">
+                    <button class="btn btn-primary bg-transparent border-0" type="button" id="dropdownMenuButton"
+                        data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        <img src="Assets/Icons/menu.svg" alt="Menu">
+                    </button>
+                    <div class="dropdown-menu dropdown-menu-custom" aria-labelledby="dropdownMenuButton">
+                        <a class="dropdown-item d-flex justify-content-between align-items-center" href="#">
+                            Progress <img src="Assets/Icons/caret-fill.svg" alt="Caret">
+                        </a>
+                        <div class="dropdown-divider"></div>
+                        <a class="dropdown-item d-flex justify-content-between align-items-center" href="#">Solved
+                            <img src="Assets/Icons/caret-fill.svg" alt="Caret"></a>
+                    </div>
                 </div>
             </div>
         </nav>
     </header>
 
-    <div class="container">
-        <div class="left">
-            <h1>Get in Touch: <span>We're Here to Answer Your Questions</span></h1>
-            <div class="contact-info">
-                <div class="contact-boxes">
-                    <div class="contact-box">📧 support@lorem.com</div>
-                    <div class="contact-box">📞 +91-101023031</div>
-                </div>
-                <div class="contact-details">
-                    <div class="contact-section">
-                        <h4>Customer Support</h4>
-                        <p>Our support team is available around the clock to help you with any queries.</p>
+    <main class="d-flex">
+
+        <!-- Main Content -->
+        <section class="container">
+            <!-- Existing contact form content -->
+            <div class="left">
+                <h1>Get in Touch: <span>We're Here to Answer Your Questions</span></h1>
+                <div class="contact-info">
+                    <div class="contact-boxes">
+                        <div class="contact-box">📧 support@codeconversion.com</div>
+                        <div class="contact-box">📞 +91-101023031</div>
                     </div>
-                    <div class="contact-section">
-                        <h4>Feedback and Suggestions</h4>
-                        <p>We value your important feedback and are continuously working towards improving ourselves to help you better.</p>
+                    <div class="contact-details">
+                        <div class="contact-section">
+                            <h4>Customer Support</h4>
+                            <p>Our support team is available around the clock to help you with any queries.</p>
+                        </div>
+                        <div class="contact-section">
+                            <h4>Feedback and Suggestions</h4>
+                            <p>We value your important feedback and are continuously working towards improving ourselves
+                                to help you better.</p>
+                        </div>
                     </div>
                 </div>
             </div>
-        </div>
-        <div class="right">
-            <h2>Get in Touch</h2>
-            <p>You can reach us anytime</p>
-            <div class="form-row">
-                <input type="text" placeholder="First Name">
-                <input type="text" placeholder="Last Name">
+            <div class="right">
+                <h2>Get in Touch</h2>
+                <p>You can reach us anytime</p>
+                <div class="form-row">
+                    <input type="text" placeholder="First Name">
+                    <input type="text" placeholder="Last Name">
+                </div>
+                <input type="email" placeholder="Email">
+                <input type="tel" placeholder="Phone no">
+                <textarea placeholder="Your Message"></textarea>
+                <button>Submit</button>
             </div>
-            <input type="email" placeholder="Email">
-            <input type="tel" placeholder="Phone no">
-            <textarea placeholder="Your Message"></textarea>
-            <button>Submit</button>
-        </div>
-    </div>
+        </section>
+        <!-- Sidebar -->
+        <aside id="sidebar" class="bg-dark text-white d-flex flex-column"
+            style="height: 100vh;background-color: black !important;">
+            <div class="p-3">
+                <h5>Code Conversion</h5>
+                <ul class="nav flex-column">
+                    <li class="nav-item">
+                        <a href="#" class="nav-link text-white" data-bs-toggle="modal"
+                            data-bs-target="#settingsModal">Settings</a>
+                    </li>
+                    <li class="nav-item"><a href="#" class="nav-link text-white">Support</a></li>
+
+                </ul>
+            </div>
+            <div class="flex-grow-1"></div>
+            <div class="p-3">
+                <ul class="nav flex-column">
+                    <li class="nav-item"><a href="#" class="nav-link text-white">Subscription</a></li>
+                    <li class="nav-item"><a href="#" class="nav-link text-white">Mohamed</a></li>
+                    <li class="nav-item"><a href="#" class="nav-link text-white">Sign out</a></li>
+                </ul>
+            </div>
+        </aside>
+        <!-- Sidebar Toggle Button -->
+        <button id="sidebarToggle" class="btn position-fixed text-white">
+            <img src="Assets/Icons/sidebar.svg" alt="Open" id="openIcon" style="display: block;">
+            <img src="Assets/Icons/sidebar.svg" alt="Close" id="closeIcon" style="display: none;">
+        </button>
+    </main>
 
     <footer class="footer fixed-bottom">
         <div class="container-fluid">
@@ -178,6 +255,36 @@
             </div>
         </div>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js"></script>
+    <!-- Add JavaScript from home.html -->
+    <script>
+        document.getElementById('sidebarToggle').addEventListener('click', function () {
+            const sidebar = document.getElementById('sidebar');
+            const openIcon = document.getElementById('openIcon');
+            const closeIcon = document.getElementById('closeIcon');
+            const main = document.querySelector('main');
+            const sidebarToggle = document.getElementById('sidebarToggle');
+
+            if (sidebar.style.left === '-250px' || sidebar.style.left === '') {
+                sidebar.style.left = '0'; // Open sidebar
+                main.style.marginLeft = '250px'; // Shift main content to the right
+                openIcon.style.display = 'none';
+                closeIcon.style.display = 'block';
+                sidebarToggle.style.left = '200px'; // Move toggle button to the right
+                sidebarToggle.style.bottom = "10px";
+            } else {
+                sidebar.style.left = '-250px'; // Close sidebar
+                main.style.marginLeft = '0'; // Reset main content margin
+                openIcon.style.display = 'block';
+                closeIcon.style.display = 'none';
+                sidebarToggle.style.left = '10px'; // Move toggle button back to original position
+            }
+        });
+
+        // Ensure the close icon is hidden initially
+        document.getElementById('closeIcon').style.display = 'none';
+    </script>
 </body>
 
 </html>
